# tp2-algo1

./: .gitignore  CMakeLists.txt  DemoCantCultivosCosechables.cpp  DemoListoParaCosechar.cpp  DemoParcelasCultivo.cpp  README.md  aux.cpp  aux_cpp_  aux_h_  campo.cpp  campo.h  demo - vueloEscalerado  demo1-vueloEscalerado.md  drone.cpp  drone.h  main  sistema.cpp  sistema.h  tipos.cpp  tipos.h  util.cpp
src/: CMakeLists.txt  Makefile  a.out  auxiliares.cpp  auxiliares.h  campo.cpp  campo.h  campo.txt  cmake_install.cmake  drone.cpp  drone.h  drone.txt  main.cpp  sistema.cpp  sistema.h  tipos.cpp  tipos.h  util.h
src/src/: Makefile  cmake_install.cmake
src/tests/: Makefile  cmake_install.cmake
src/tests/lib/googletest-release-1.7.0/: Makefile  cmake_install.cmake
tests/: CMakeLists.txt  aux_h_  factories.cpp  factories.h  test_campo.cpp  test_drone_cargar_y_guardar.cpp  test_drone_lo_basico.cpp  test_drone_vuelo_escalerado.cpp  test_drone_vuelos_cruzados.cpp  test_sistema_cargar_y_guardar.cpp  test_sistema_despegar.cpp  test_sistema_listo_para_cosechar.cpp  test_sistema_lo_basico.cpp  test_sistema_se_expande_plaga.cpp  test_sistema_se_vino_la_maleza.cpp  test_sistema_volar_y_sensar.cpp
